Issue#54: Fixed comment text not wrapping

--- a/Project-Omni-Ride-Network/wwwroot/css/style.css
+++ b/Project-Omni-Ride-Network/wwwroot/css/style.css
@@ -840,6 +840,10 @@ select.loginpage option {
 	user-select: none;
 }
 
+#rating .child .commenttext {
+	overflow-wrap: break-word;
+}
+
 #rating .rating-userstar:before {
 	content: "\2605";
 }
